<resources>
    <string name="app_name">Test2</string>
    <string name="www_baidu_com">www.baidu.com</string>
    <string name="ac">AC</string>
    <string name="t1">+/-</string>
    <string name="chu">%</string>
    <string name="chu1">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="cheng">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="jian">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="jia">+</string>
    <string name="_0">0</string>
    <string name="dian">.</string>
    <string name="dengyu">=</string>
</resources>
